1.1.0 (2009-05-04)
==================

- Applied Eric Hauser's patch fixing CORE-ISSUE-22
  "Support for environment variables in resource URI"

- Applied Gauthier Segay's patch fixing CORE-ISSUE-20
  "Castle.Core.Tests won't build via nant because it use TraceContext without referencing System.Web.dll"

- Added simple interface to ComponentModel to make optional properties required. 

- Applied Mark's -- <mwatts42@gmail.com> -- patch that changes 
  the Core to support being compiled for Silverlight 2

- Applied Louis DeJardin's patch adding TraceLogger as a new logger implementation

- Applied Chris Bilson's patch fixing CORE-15
  "WebLogger Throws When Logging Outside of an HttpContext"

Release Candidate 3
===================

- Added IServiceProviderEx which extends IServiceProvider

- Added Pair<T,S> class. 

- Applied Bill Pierce's patch fixing CORE-9 
  "Allow CastleComponent Attribute to Specify Lifestyle in Constructor"

- Added UseSingleInterfaceProxy to CompomentModel to control the proxying
  behavior while maintaining backward compatibility.
  Added the corresponding ComponentProxyBehaviorAttribute.

- Made NullLogger and IExtnededLogger

- Enabled a new format on ILogger interface, with 6 overloads for each method:
    Debug(string)
    Debug(string, Exception)
    Debug(string, params object[])
    DebugFormat(string, params object[])
    DebugFormat(Exception, string, params object[])
    DebugFormat(IFormatProvider, string, params object[])
    DebugFormat(IFormatProvider, Exception, string, params object[])

  The "FatalError" overloads where marked as [Obsolete], replaced by "Fatal" and "FatalFormat".

0.0.1.0
=======

- Included IProxyTargetAccessor

- Removed IMethodInterceptor and IMethodInvocation, that have been replaced
  by IInterceptor and IInvocation

- Added FindByPropertyInfo to PropertySetCollection

- Made the DependencyModel.IsOptional property writable

- Applied Curtis Schlak's patch fixing IOC-27