@@ -16,6 +16,7 @@ namespace Castle.DynamicProxy.Tests
 {
 	using System;
 	using System.Collections.Generic;
+	using Castle.Core.Interceptor;
 	using Castle.DynamicProxy.Tests.InterceptorSelector;
 	using Castle.DynamicProxy.Tests.Mixins;
 	using NUnit.Framework;
